# ofxstatement-sample

./: .gitignore  Pipfile  README.rst  howtorun.md  pyproject.toml  setup.py
src/ofxstatement/plugins/: CsvParser.py  kh.py
tests/: test_sample.py
